src/objects/DTC_Application_Level__c 2.object
<CustomObject>
    <label>DTC Application Level</label>
    <nameField>
        <label>DTC Application Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DTC Application Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Application_Level_User_Creation_Apex__c</fullName>
        <description>Apex used to supplement user provision process for a specific application</description>
        <label>Application Level User Creation Apex</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Level_User_Creation_Flow__c</fullName>
        <description>Flow used to supplement user provision process for a specific application</description>
        <label>Application Level User Creation Flow</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DTC_Application__c</fullName>
        <label>DTC Application</label>
        <referenceTo>DTC_Application__c</referenceTo>
        <relationshipLabel>DTC Application Levels</relationshipLabel>
        <relationshipName>DTC_Application_Levels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Destination_Org_License__c</fullName>
        <description>License name required in the destination org</description>
        <label>Destination Org License</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Org_Profile__c</fullName>
        <description>Profile name required in the destination org</description>
        <label>Destination Org Profile</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Org_Role__c</fullName>
        <description>Role name in the destination org</description>
        <label>Destination Org Role</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elevated_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines whether this role requires an ePas request to obtain</inlineHelpText>
        <label>Elevated Access?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hub_Org_License__c</fullName>
        <description>License name required in the hub org</description>
        <label>Hub Org License</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hub_Org_Profile__c</fullName>
        <description>Profile name required in the hub org</description>
        <label>Hub Org Profile</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hub_Org_Role__c</fullName>
        <description>Role name in the hub org</description>
        <label>Hub Org Role</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Setup_Info__c</fullName>
        <label>Other Setup Info</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Permission_Set_s__c</fullName>
        <label>Permission Set(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Profile_Name__c</fullName>
        <label>Profile Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Group_s__c</fullName>
        <label>Public Group(s)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>